--- a/src/app/Navbar/Navbar.module.css
+++ b/src/app/Navbar/Navbar.module.css
@@ -66,3 +66,32 @@
   top: 4px;
   right: 4px;
 }
+
+@media only screen and (max-width: 600px) {
+  .list {
+    padding: 5px;
+  }
+
+  .bar {
+    padding: 10px;
+    display: block;
+  }
+
+  .homes {
+    left: 0;
+    margin-right: auto;
+    margin-left: auto;
+    display: block;
+  }
+
+  .Custom,
+  .Designer,
+  .info,
+  .contact {
+    display: none;
+  }
+
+  .home {
+    font-size: 16px;
+  }
+}
