--- a/src/app/Custom-Jewellery/Custom-Jewellery.module.css
+++ b/src/app/Custom-Jewellery/Custom-Jewellery.module.css
@@ -2,6 +2,8 @@
   padding-top: 80px;
   text-align: center;
   overflow: hidden;
+  background: url(https://source.unsplash.com/E8Ufcyxz514/2400x1823)
+    center/cover no-repeat fixed;
 }
 
 .Custom {
@@ -12,8 +14,8 @@
 }
 
 .latest {
-  color: #fcbe32;
-  font-weight: 500;
+  color: black;
+  font-weight: 700;
   letter-spacing: 2px;
   margin-bottom: 20px;
 }
@@ -27,10 +29,9 @@
   padding: 40px;
   margin: 20px;
   cursor: pointer;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px,
-    rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-
   perspective: 1000px;
+  background-color: rgba(255, 255, 255, 0.45);
+  box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
 }
 
 .one:hover .card {
