--- a/src/app/Custom-Jewellery/Custom-Jewellery.module.css
+++ b/src/app/Custom-Jewellery/Custom-Jewellery.module.css
@@ -29,6 +29,7 @@
   padding: 40px;
   margin: 20px;
   cursor: pointer;
+  backdrop-filter: blur(15px);
   perspective: 1000px;
   background-color: rgba(255, 255, 255, 0.45);
   box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
@@ -136,4 +137,9 @@
   position: relative;
   bottom: 5px;
   color: green;
+}
+
+.oneIcon {
+  position: relative;
+  top: 10px;
 }
