MAKE RESPONSIVE A ALL THIS PAGE  CUSTOM JEWELRY / DESIGNER JEWELRY / CONTACT

--- a/src/app/Navbar/Navbar.module.css
+++ b/src/app/Navbar/Navbar.module.css
@@ -67,7 +67,7 @@
   right: 4px;
 }
 
-@media only screen and (max-width: 600px) {
+/* @media only screen and (max-width: 600px) {
   .list {
     padding: 5px;
   }
@@ -94,4 +94,4 @@
   .home {
     font-size: 16px;
   }
-}
+} */
