--- a/src/app/Custom-Jewellery/Custom-Jewellery.module.css
+++ b/src/app/Custom-Jewellery/Custom-Jewellery.module.css
@@ -108,6 +108,11 @@
   height: 200px;
 }
 
+.cardTwo {
+  text-decoration: none;
+  color: black;
+}
+
 .one:hover {
   transform: scale(1.1);
   overflow: hidden;
