Adding a Ring nd Earrings categories

--- a/src/app/Bracelet/bracelet.module.css
+++ b/src/app/Bracelet/bracelet.module.css
@@ -2,8 +2,7 @@
   padding-top: 80px;
   text-align: center;
   overflow: hidden;
-  background: url(https://source.unsplash.com/E8Ufcyxz514/2400x1823)
-    center/cover no-repeat fixed;
+  background-color: antiquewhite;
 }
 
 .Custom {
