--- a/src/app/Custom-Jewellery/Custom-Jewellery.module.css
+++ b/src/app/Custom-Jewellery/Custom-Jewellery.module.css
@@ -2,8 +2,9 @@
   padding-top: 80px;
   text-align: center;
   overflow: hidden;
-  background: url(https://source.unsplash.com/E8Ufcyxz514/2400x1823)
-    center/cover no-repeat fixed;
+  /* background: url(https://source.unsplash.com/E8Ufcyxz514/2400x1823)
+    center/cover no-repeat fixed; */
+  background-color: antiquewhite;
 }
 
 .Custom {
@@ -29,7 +30,7 @@
   padding: 40px;
   margin: 20px;
   cursor: pointer;
-  backdrop-filter: blur(15px);
+  /* backdrop-filter: blur(15px); */
   perspective: 1000px;
   background-color: rgba(255, 255, 255, 0.45);
   box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
